--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,43 +1,48 @@
 form {
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 15px;
+    font-weight: 400;
     color: black;
+    width: 500px;
+    padding: 20px;
+    border: 1px inset black;
 
 }
 
 .button {
-    width: 150px;
-    font-weight: 700;
-    height: 40px;
+    width: 120px;
+    font-weight: 300;
+    height: 30px;
     padding: 1px 5px;
-    font-size: 17px;
+    font-size: 14px;
     cursor: pointer;
-    border: 2px solid black;
-    background-color: rgb(190, 138, 138);
+    border: 1px solid black;
+    background-color: rgb(91, 122, 206);
     border-radius: 2px;
 }
 
 .label {
     margin-bottom: 15px;
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .input1 {
-    width: 200px;
-    margin-left: 30px;
+    width: 380px;
     height: 25px;
     font-size: 15px;
-    border: 2px solid rgb(0, 94, 128);
+    border: 2px solid rgb(28, 28, 28);
     background-color: rgba(255, 255, 255, 0.525);
 }
 
 .input2 {
-    margin-left: 10px;
-    width: 200px;
+    width: 380px;
     height: 25px;
     font-size: 15px;
-    border: 2px solid rgb(0, 94, 128);
+    border: 2px solid rgb(28, 28, 28);
     background-color: rgba(255, 255, 255, 0.525);
 }
